--- a/main.html
+++ b/main.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<title>My HTML Challenge</title>
 </head>
-
 <body>
 	<!-- PLease only edit this file for this asssignment. Thanks!-->
-	 <h1>Hello world</h1>
-	<p>this is my first HTML coding challenge</p>
+	<h1>Hello World</h1>
 </body>
-
 </html>
